# rpgkit

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/rpg/core/: action.hpp  bus.hpp  chain.hpp  effect.hpp  status.hpp  version.hpp
core/tests/: action_test.cpp  bus_test.cpp  chain_test.cpp  effect_test.cpp  status_test.cpp  strike_integration_test.cpp  topic_test.cpp  version_test.cpp
docs/: quality.md  status.md
docs/architecture/: README.md  host-boundary.md
docs/how-to/: build-a-damage-chain.md  dev-setup.md  start-your-own-game.md
docs/journey/: 2026-06-12-tutorial-tracks.md  2026-06-13-linear-tutorials-6-8.md  2026-06-13-observer-pattern-design.md  2026-06-13-tutorial-06-bus-plan.md  2026-06-21-action-context-guidance.md  2026-06-21-chain-receipt-source-metadata.md  2026-06-21-host-created-runtime-effect-lifecycle.md  2026-06-21-minimum-observation-api.md
docs/superpowers/plans/: 2026-06-12-tutorial-tracks.md
docs/tutorials/: 01-getting-started.md  02-your-first-terminal-game.md  03-cards-and-energy.md  04-block.md  05-monster-brain.md  06-statuses.md  06-the-bus.md  07-rich-events.md  08-effects.md  README.md  juice.md
docs/tutorials/workshop/: w01-bus.md  w02-chains.md  w03-rage-dissected.md  w04-build-your-own-effect.md
examples/: CMakeLists.txt
examples/chain_basics/: CMakeLists.txt  main.cpp
examples/strike/: CMakeLists.txt  main.cpp
examples/tutorials/: CMakeLists.txt
examples/tutorials/02_game_base/: CMakeLists.txt  main.cpp
examples/tutorials/03_cards_energy/: CMakeLists.txt  main.cpp
examples/tutorials/04_block/: CMakeLists.txt  main.cpp
examples/tutorials/05_monster_brain/: CMakeLists.txt  main.cpp
examples/tutorials/06_bus/: CMakeLists.txt  main.cpp
examples/tutorials/06_statuses/: CMakeLists.txt  main.cpp
examples/tutorials/07_rich_events/: CMakeLists.txt  main.cpp
examples/tutorials/08_effects/: CMakeLists.txt  main.cpp
examples/workshop/: CMakeLists.txt
examples/workshop/w01_bus/: CMakeLists.txt  main.cpp
examples/workshop/w02_chains/: CMakeLists.txt  main.cpp
examples/workshop/w04_build_effect/: CMakeLists.txt  skeleton.cpp  solution.cpp
